# ntest

./: .gitignore  README.md  build.sh
enigel/: README.md
enigel/autogen/: flip_gen.py
extras/Parallel_openings/: P1.txt  P2.txt  P3.txt  P41.txt  P42.txt  P43.txt  P44.txt  P45.txt  P46.txt  Parallel.txt
extras/dis/: disp.py
extras/pybit/: bits.py
resource/: parameters.txt
resource/coefficients/: merge.book
src/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  GameX.cpp  MPCCalc.cpp  PlayerComputer.cpp  PlayerComputer.h  Pos2.cpp  Pos2.h  Pos2Test.cpp  Search.cpp  SearchTest.cpp  SmartBook.cpp  SpeedTest.cpp  SpeedTest.h  Stable.cpp  Stable.hpp  allPositions.cpp  bookconv.cpp  bookplay.cpp  dump.cc  mingw.rakefile  ntest.cpp  rakefile  randomEvalGen.cpp
src/core/: BitBoard.cpp  BitBoard.h  BitBoardTest.cpp  Book.cpp  Book.h  BookTest.cpp  BookTest.h  Cache.cpp  Cache.h  CalcParams.cpp  CalcParams.h  HeightInfo.h  MPCStats.cpp  Moves.cpp  NodeStats.cpp  QPositionTest.cpp  QPositionTest.h  Store.cpp  Store.h  StoreTest.cpp  StoreTest.h  ThreadSafeCache.cpp  ThreadSafeCache.h  coreTest.h
src/n64/: CMakeLists.txt  bitExtractTest.cpp  bitExtractTestMain.cpp  bitextractor.h  endgameSearch.h  endgameSearchTest.h  extract_and_convert.hpp  flips.cpp  flips.h  flipsTest.cpp  flipsTest.h  hashTest.h  lastFlipCountGenerator.cpp  lastFlipCountGenerator.h  n64.cpp  solve.cpp  test.cpp  test.h  utilsTest.h
src/odk/: CMakeLists.txt  GGSMessage.h  (+9 more)
src/pattern/: CMakeLists.txt  Patterns.cpp  Patterns.h  Stable.cpp  Stable.h  patternJ.h  randomPlayMain.cpp  randomPlayTest.cpp
(+3 files in other folders)
